@@ -29,20 +29,17 @@ import xbmcplugin
 
 import buggalo
 
-from channels import CHANNELS, CATEGORIES, QUALITIES, CATEGORY_DR, Q_BEST, Q_RASPBERRY_PI
+from channels import CHANNELS, CATEGORIES, QUALITIES, Q_BEST, Q_RASPBERRY_PI
 
 TITLE_OFFSET = 31000
 
 
 class DanishLiveTV(object):
     def showChannels(self, category=None):
-        if ADDON.getSetting('raspberry.pi.compatible.streams') == 'true':
-            quality = Q_RASPBERRY_PI
-        else:
-            try:
-                quality = QUALITIES[int(ADDON.getSetting('quality'))]
-            except ValueError:
-                quality = QUALITIES[Q_BEST]  # fallback for old settings value
+        try:
+            quality = QUALITIES[int(ADDON.getSetting('quality'))]
+        except ValueError:
+            quality = QUALITIES[Q_BEST]  # fallback for old settings value
 
         if category is not None:
             channels = CATEGORIES[category]
@@ -85,13 +82,10 @@ class DanishLiveTV(object):
         xbmcplugin.endOfDirectory(HANDLE)
 
     def playChannel(self, id):
-        if ADDON.getSetting('raspberry.pi.compatible.streams') == 'true':
-            quality = Q_RASPBERRY_PI
-        else:
-            try:
-                quality = QUALITIES[int(ADDON.getSetting('quality'))]
-            except ValueError:
-                quality = QUALITIES[Q_BEST]  # fallback for old settings value
+        try:
+            quality = QUALITIES[int(ADDON.getSetting('quality'))]
+        except ValueError:
+            quality = QUALITIES[Q_BEST]  # fallback for old settings value
 
         for channel in CHANNELS:
             if str(channel.category_id) == id:
@@ -130,12 +124,12 @@ class DanishLiveTV(object):
             imInDenmark = False
 
         if not imInDenmark:
-            heading = ADDON.getLocalizedString(99970)
-            line1 = ADDON.getLocalizedString(99971)
-            line2 = ADDON.getLocalizedString(99972)
-            line3 = ADDON.getLocalizedString(99973)
-            nolabel = ADDON.getLocalizedString(99974)
-            yeslabel = ADDON.getLocalizedString(99975)
+            heading = ADDON.getLocalizedString(39970)
+            line1 = ADDON.getLocalizedString(39971)
+            line2 = ADDON.getLocalizedString(39972)
+            line3 = ADDON.getLocalizedString(39973)
+            nolabel = ADDON.getLocalizedString(39974)
+            yeslabel = ADDON.getLocalizedString(39975)
             if xbmcgui.Dialog().yesno(heading, line1, line2, line3, nolabel, yeslabel):
                 ADDON.setSetting('warn.if.not.in.denmark', 'false')
 
@@ -160,9 +154,12 @@ if __name__ == '__main__':
     buggalo.SUBMIT_URL = 'http://tommy.winther.nu/exception/submit.php'
     try:
         danishTV = DanishLiveTV()
-        if ADDON.getSetting('raspberry.pi.compatible.streams') == '':
+        if ADDON.getSetting('quality') == '':
             # set default value based on what we are able to detect
-            ADDON.setSetting('raspberry.pi.compatible.streams', danishTV.isRaspberryPi().__str__().lower())
+            if danishTV.isRaspberryPi():
+                ADDON.setSetting('quality', str(Q_RASPBERRY_PI))
+            else:
+                ADDON.setSetting('quality', str(Q_BEST))
 
         if 'playChannel' in PARAMS:
             danishTV.playChannel(PARAMS['playChannel'][0])
