@@ -10,12 +10,12 @@
     <string id="30107">Sekundær stream</string>
     <string id="30108">Advarsler</string>
     <string id="30109">Advar hvis ikke i Danmark</string>
-    <string id="30110">Vis kun Raspberry Pi kompatible streams</string>
 
     <string id="30150">Bedste (op til 2 mbit/s)</string>
     <string id="30151">Høj (1 mbit/s)</string>
     <string id="30152">Medium (500 kbit/s)</string>
     <string id="30153">Lav (250 kbit/s)</string>
+    <string id="30153">Raspberry Pi kompatibel</string>
 
     <string id="30201">Danmarks Radio</string>
     <string id="30202">TV2/Regionerne</string>
@@ -42,10 +42,10 @@
     <string id="31202">danskespil.dk Lotto</string>
     <string id="31203">Kanal Sport</string>
 
-    <string id="99970">Advarsel!</string>
-    <string id="99971">Det ser ud til du ikke befinder dig i Danmark.</string>
-    <string id="99972">En eller flere kanaler vil måske ikke kunne afspilles</string>
-    <string id="99973">eller der kan opstå andre uventede fejl.</string>
-    <string id="99974">OK</string>
-    <string id="99975">Vis ikke igen</string>
+    <string id="39970">Advarsel!</string>
+    <string id="39971">Det ser ud til du ikke befinder dig i Danmark.</string>
+    <string id="39972">En eller flere kanaler vil måske ikke kunne afspilles</string>
+    <string id="39973">eller der kan opstå andre uventede fejl.</string>
+    <string id="39974">OK</string>
+    <string id="39975">Vis ikke igen</string>
 </strings>
