@@ -10,12 +10,12 @@
     <string id="30107">Sekundær stream</string>
     <string id="30108">Warnings</string>
     <string id="30109">Warn when not in Denmark</string>
-    <string id="30110">Only show Raspberry Pi compatible streams</string>
 
     <string id="30150">Best (up to 2 mbit/s)</string>
     <string id="30151">High (1 mbit/s)</string>
     <string id="30152">Medium (500 kbit/s)</string>
     <string id="30153">Low (250 kibt/s)</string>
+    <string id="30154">Raspberry Pi compatible</string>
 
     <string id="30201">Danish Broadcasting Corporation</string>
     <string id="30202">TV2/Regions</string>
@@ -42,10 +42,10 @@
     <string id="31202">danskespil.dk Lotto</string>
     <string id="31203">Kanal Sport</string>
 
-    <string id="99970">Warning!</string>
-    <string id="99971">It looks like you are not in Denmark.</string>
-    <string id="99972">One or more channels may not be playable</string>
-    <string id="99973">or other unexpected errors may occur.</string>
-    <string id="99974">OK</string>
-    <string id="99975">Don't show again</string>
+    <string id="39970">Warning!</string>
+    <string id="39971">It looks like you are not in Denmark.</string>
+    <string id="39972">One or more channels may not be playable</string>
+    <string id="39973">or other unexpected errors may occur.</string>
+    <string id="39974">OK</string>
+    <string id="39975">Don't show again</string>
 </strings>
